# MFP

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: downloader.rs  favorites.rs  feed.rs  main.rs  mpris.rs  player.rs  playlist.rs
