[package]
name = "mfp"
version = "0.1.0"
edition = "2021"
authors = ["4drian0rtiz"]
license = "GPL-3.0"
description = "Lightweight Rust player for Music For Programming radio"
repository = "https://github.com/4drian0rtiz/mfp"
keywords = ["music", "player", "streaming", "audio", "cli"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
rss = "2.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
rodio = { version = "0.17", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }
crossterm = "0.27"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
